@@ -1,8 +1,7 @@
 package PU.pushop.review.model;
 
-import PU.pushop.Inquiry.model.InquiryReplyDto;
-import PU.pushop.payment.entity.PaymentHistory;
 import PU.pushop.review.entity.Review;
+import PU.pushop.reviewImg.ReviewImg;
 import jakarta.validation.constraints.Max;
 import jakarta.validation.constraints.Min;
 import lombok.AllArgsConstructor;
@@ -11,7 +10,6 @@ import lombok.NoArgsConstructor;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Data
 @AllArgsConstructor
@@ -30,6 +28,7 @@ public class ReviewDto {
     private String writer;
     private Long productId;
     private String productName;
+    private List<String> reviewImgPaths;
     private List<ReviewReplyDto> replies;
 
     public ReviewDto(Review review) {
@@ -44,17 +43,10 @@ public class ReviewDto {
                 review.getPaymentHistory().getOrders().getMember().getUsername(),
                 review.getPaymentHistory().getProduct().getProductId(),
                 review.getPaymentHistory().getProduct().getProductName(),
-                review.getReplies() != null ? review.getReplies().stream().map(ReviewReplyDto::new).collect(Collectors.toList()) : null
+                review.getReviewImages().stream().map(ReviewImg::getReviewImgPath).toList(),
+
+                review.getReplies() != null ? review.getReplies().stream().map(ReviewReplyDto::new).toList() : null
         );
-    }
-
-    public static Review requestForm(ReviewDto request) {
-        Review review = new Review();
-
-        review.setReviewContent(request.getReviewContent());
-        review.setRating(request.getRating());
-
-        return review;
     }
 
 }
